photos/photoprism/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: photoprism
spec:
  selector:
    matchLabels:
      app: photoprism
  serviceName: photoprism
  replicas: 1
  template:
    metadata:
      labels:
        app: photoprism
    spec:
      containers:
      - name: photoprism
        image: docker.io/photoprism/photoprism:230514
        ports:
        - containerPort: 2342
          name: http
        volumeMounts:
        - mountPath: /assets
          name: photoprism
        readinessProbe:
          httpGet:
            path: /api/v1/status
            port: http
      volumes:
      - name: photoprism
        hostPath:
          path: /photoprism
          type: Directory
