photos/photoprism/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photoprism
spec:
  tls:
  - hosts:
    - photos.toothyshouse.com
    secretName: toothyshouse-com-tls
  rules:
  - host: photos.toothyshouse.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: photoprism
            port:
              number: 80
  ingressClassName: nginx
